test/sema/typeck/literal/hex-int32-overflow.out
error: number does not fit into type Int32.
--> hex-int32-overflow.dora:1:19
 | fn f() { let _x = 0x1_FF_FF_FF_FFi32; }
                     ~~~~~~~~~~~~~~~~~~
 | 
1 error found.
