test/sema/typeck/literal/hex-int32-overflow.dora
fn f() { let _x = 0x1_FF_FF_FF_FFi32; }
